--- a/contact.html
+++ b/contact.html
@@ -725,7 +725,7 @@ window.addEventListener('load', () => {
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
            <a href="/" target="_blank"><i class="bi bi-discord"></a>
         </div>
-        <a href="#" class="copyright">&copy; 2025 Danny Agency</a>
+        <a href="#" class="copyright">&copy; 2025 DANNY AGENCY,ALL RIGHTS RESERVEDy</a>
     </footer>
 
 
