--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@ nav .socials {
         <ul>
           <li><a class="current" href="index.html">Home</a></li>
             <li><a class="grad-text" href="portfolio.html">Works</a></li>
-            <li><a href="contact.html" class="active">Hirevus</a></li>
+            <li><a href="contact.html" class="active">Hire us</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="faqs.html">FAQs</a></li>
           <br>
@@ -566,7 +566,7 @@ nav .socials {
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
             <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
         </div>
-  <a href="#" class="copyright">&copy; 2025 Danny Agency</a>
+  <a href="#" class="copyright">&copy; 2025 DANNY AGENCY,ALL RIGHTS RESERVED</a>
 </footer>
 
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
