--- a/portfolio.html
+++ b/portfolio.html
@@ -92,13 +92,14 @@ body, html {
 }
 
 .tag {
-  background: #f6f6f6;
   border-radius: 2em;
   padding: 0.3em 0.9em;
   font-size: 0.8em;
   color: #555;
   margin-bottom: 0.8em;
   display: inline-block;
+  background: transparent;
+ border: 1px solid black;
 }
 
 .card h2 {
@@ -128,8 +129,6 @@ body, html {
     justify-content: flex-end;
     align-items: center;
     gap: 4px;
-    background: transparent;
-    border: 1px solid black;
 }
 
 .year {
@@ -572,7 +571,9 @@ h2 {
       </div>
 
       <p>Heat Culture redefine premium streetwear with bold designs and quality craftsmanship.</p>
+      <div style="display: flex; gap: 10px; flex-wrap: wrap;">
         <span class="tag">Shopify</span>  <span class="tag">Theme Development</span>   <span class="tag">SEO</span>
+        </div>
     </div>
   </a>
 
@@ -595,7 +596,9 @@ h2 {
       </div>
 
       <p>A surreal Y2K-inspired manga series by Saharan Rockin Studios.</p>
+      <div style="display: flex; gap: 10px; flex-wrap: wrap;">
          <span class="tag">Shopify</span>  <span class="tag">Theme Development</span>   <span class="tag">SEO</span>
+        </div>
     </div>
   </a>
 
@@ -618,7 +621,9 @@ h2 {
       </div>
 
       <p>An encounter of states conveyed through garments.</p>
+      <div style="display: flex; gap: 10px; flex-wrap: wrap;">
               <span class="tag">Shopify</span>  <span class="tag">Theme Development</span>
+        </div>
     </div>
   </a>
 
@@ -630,7 +635,7 @@ h2 {
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
            <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
         </div>
-        <a href="#" class="copyright">&copy; 2025 Danny Agency</a>
+        <a href="#" class="copyright">&copy; 2025 DANNY AGENCY,ALL RIGHTS RESERVED</a>
     </footer>
 <style>
 .ultra-small {
