--- a/about.html
+++ b/about.html
@@ -578,7 +578,7 @@ window.addEventListener('load', () => {
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
          <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
         </div>
-  <a href="#" class="copyright">&copy; 2025 Danny Agency</a>
+  <a href="#" class="copyright">&copy; 2025 DANNY AGENCY,ALL RIGHTS RESERVED</a>
 </footer>
 
 </body>
