--- a/faqs.html
+++ b/faqs.html
@@ -474,56 +474,63 @@ nav .socials {
         </ul>
     </nav>
     
-    <div class="container">
-        <h2 class="hd">Frequently Asked Questions</h2>
-        <div class="accordion">
-            <div class="accordion-item">
-                <button id="accordion-button-1" aria-expanded="false">
-                    <span class="accordion-title">What services does Danny Agency offer?</span>
-                    <span class="icon" aria-hidden="true"></span>
-                </button>
-                <div class="accordion-content">
-                    <p>Danny Agency specializes in web design, development, and digital marketing services tailored to meet the unique needs of each client. We create responsive websites that enhance user experience and drive engagement.</p>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <button id="accordion-button-2" aria-expanded="false">
-                    <span class="accordion-title">How long does it take to build a website?</span>
-                    <span class="icon" aria-hidden="true"></span>
-                </button>
-                <div class="accordion-content">
-                    <p>The timeline for building a website varies based on complexity and requirements. Typically, a standard website can take anywhere from 2 to 8 weeks from initial consultation to launch.</p>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <button id="accordion-button-3" aria-expanded="false">
-                    <span class="accordion-title">Do you provide ongoing support after the website is launched?</span>
-                    <span class="icon" aria-hidden="true"></span>
-                </button>
-                <div class="accordion-content">
-                    <p>Yes, Danny Agency offers ongoing support and maintenance packages to ensure your website remains updated and secure, providing peace of mind for our clients.</p>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <button id="accordion-button-4" aria-expanded="false">
-                    <span class="accordion-title">Can you help with SEO and digital marketing?</span>
-                    <span class="icon" aria-hidden="true"></span>
-                </button>
-                <div class="accordion-content">
-                    <p>Absolutely! Our team is skilled in SEO and digital marketing strategies that can help increase your website's visibility and drive more traffic to your business.</p>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <button id="accordion-button-5" aria-expanded="false">
-                    <span class="accordion-title">What platforms do you work with?</span>
-                    <span class="icon" aria-hidden="true"></span>
-                </button>
-                <div class="accordion-content">
-                    <p>Danny Agency works with a variety of platforms including WordPress, Shopify, and custom-built solutions to best fit your project needs.</p>
-                </div>
-            </div>
-        </div>
+<div class="container">
+  <h2 class="hd">Frequently Asked Questions</h2>
+  <div class="accordion">
+
+    <div class="accordion-item">
+      <button id="accordion-button-1" aria-expanded="false">
+        <span class="accordion-title">What services does Danny Agency provide?</span>
+        <span class="icon" aria-hidden="true"></span>
+      </button>
+      <div class="accordion-content">
+        <p>Danny Agency offers a full range of digital solutions including web design, development, branding, and digital marketing. Our goal is to help businesses build strong online identities that engage audiences and drive measurable results.</p>
+      </div>
     </div>
+
+    <div class="accordion-item">
+      <button id="accordion-button-2" aria-expanded="false">
+        <span class="accordion-title">How long does it take to design and launch a website?</span>
+        <span class="icon" aria-hidden="true"></span>
+      </button>
+      <div class="accordion-content">
+        <p>Project timelines vary depending on the scope and complexity. On average, a standard website project takes between 4–8 weeks from initial consultation to launch, ensuring every detail is crafted with precision.</p>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <button id="accordion-button-3" aria-expanded="false">
+        <span class="accordion-title">Do you offer ongoing website support and maintenance?</span>
+        <span class="icon" aria-hidden="true"></span>
+      </button>
+      <div class="accordion-content">
+        <p>Yes. We provide flexible support and maintenance plans to keep your website secure, updated, and performing at its best. Our team is always available for technical assistance and content updates post-launch.</p>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <button id="accordion-button-4" aria-expanded="false">
+        <span class="accordion-title">Can Danny Agency assist with SEO and online marketing?</span>
+        <span class="icon" aria-hidden="true"></span>
+      </button>
+      <div class="accordion-content">
+        <p>Absolutely. Our marketing experts specialize in SEO, social media strategy, and performance marketing to help your brand gain visibility, attract qualified leads, and achieve long-term growth online.</p>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <button id="accordion-button-5" aria-expanded="false">
+        <span class="accordion-title">Which platforms and technologies do you specialize in?</span>
+        <span class="icon" aria-hidden="true"></span>
+      </button>
+      <div class="accordion-content">
+        <p>We work with a wide range of platforms including WordPress, Shopify, Webflow, and custom-coded solutions using modern frameworks. Our team ensures the chosen platform aligns perfectly with your business goals and scalability needs.</p>
+      </div>
+    </div>
+
+  </div>
+</div>
+
 <script>
     const items = document.querySelectorAll(".accordion button");function toggleAccordion() {  const itemToggle = this.getAttribute('aria-expanded');    for (i = 0; i < items.length; i++) {    items[i].setAttribute('aria-expanded', 'false');  }    if (itemToggle == 'false') {    this.setAttribute('aria-expanded', 'true');  }}items.forEach(item => item.addEventListener('click', toggleAccordion));document.addEventListener("DOMContentLoaded", function() {            const logo = document.querySelector('.logo');            if (logo) {                logo.onclick = function() {                    window.location.href = "/";                };            }        });
 
@@ -579,7 +586,7 @@ window.addEventListener('load', () => {
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
           <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
         </div>
-        <a href="#" class="copyright">&copy; 2025 Danny Agency</a>
+        <a href="#" class="copyright">&copy; 2025 DANNY AGENCY,ALL RIGHTS RESERVED</a>
     </footer>
 </body>
 </html>
