--- a/portfolio.html
+++ b/portfolio.html
@@ -532,7 +532,7 @@ h2 {
        <ul>
           <li><a class="grad-text" href="index.html">Home</a></li>
             <li><a class="current" href="portfolio.html">Works</a></li>
-            <li><a href="contact.html" class="active">Hire us</a></li>
+            <li><a href="contact.php" class="active">Hire us</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="faqs.html">FAQs</a></li>
            <br>
@@ -549,9 +549,6 @@ h2 {
     <section>
 
      <!-- Works Section -->
-<section class="works">
-
-
   <!-- HEAT CULTURE -->
   <a href="https://www.heatculture.in/" target="_blank" class="card-link">
     <div class="card" style="--card-color:#e9f8ef;">
@@ -626,8 +623,7 @@ h2 {
         </div>
     </div>
   </a>
-
-  
+</section>
     <footer>
       <p>For more of our works and services, <a href="mailto:dannyagency98@gmail.com">contact us</a></p>
         <div class="socials">
