--- a/about.html
+++ b/about.html
@@ -408,7 +408,7 @@ nav .socials {
     <ul>
           <li><a class="grad-text" href="index.html">Home</a></li>
             <li><a class="grad-text" href="portfolio.html">Works</a></li>
-            <li><a href="contact.html" class="active">Hire us</a></li>
+            <li><a href="contact.php" class="active">Hire us</a></li>
             <li><a href="about.html" class="current">About us</a></li>
             <li><a href="faqs.html">FAQs</a></li>
         <br>
