--- a/contact.html
+++ b/contact.html
@@ -385,6 +385,37 @@ border: 1.3px solid #fff;
     justify-content: center;
     align-items: center;
 }
+.button-cover::before {
+  content: '';
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.5s ease;
+  z-index: -1;
+}
+
+.button-cover:hover::before {
+  transform: scaleX(1);
+}
+
+.button-cover::after {
+  content: '';
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: transform 0.5s ease 0.25s; /* delay for diagonal effect */
+  z-index: -1;
+}
+
+.button-cover:hover::after {
+  transform: scaleY(1);
+}
 button {
   height: 3em;
   border: none;
@@ -640,41 +671,40 @@ nav .socials {
 
 <script>
 (function() {
-    emailjs.init("ml8GpF6KTxTEOJxvr"); // Your EmailJS public key
+    // Initialize EmailJS
+    emailjs.init("ml8GpF6KTxTEOJxvr"); // Your EmailJS User ID
 })();
 
+// Listen for form submission
 document.getElementById('contact-form').addEventListener('submit', function(event) {
     event.preventDefault(); // Prevent default form submission
 
     const form = this;
-    const userEmail = document.getElementById('email').value;
-    const userName = document.getElementById('from_name').value;
-    const userMessage = document.getElementById('message').value;
 
-    // 1️⃣ Send Contact Us email to admin
-    emailjs.sendForm("service_0sk5zyp", "template_aseqaaw", form)
+    // 1️⃣ Send the main "Contact Us" email to your inbox
+    emailjs.sendForm("service_7s6dqpb", "template_aseqaaw", form)
         .then(function() {
-            console.log("Admin email sent successfully");
+            // Show success message
+            document.getElementById('success-message').innerHTML = `
+                <div class="success">Message sent successfully!</div>
+            `;
 
-            // 2️⃣ Send Auto-Reply email to user
-            emailjs.send("service_0sk5zyp", "template_6tcfzt4", {
-                email: userEmail,
-                name: userName,
-                message: userMessage
-            }).then(function() {
-                document.getElementById('success-message').innerHTML = 
-                    `<div class="success">Message sent successfully! Auto-reply sent to ${userEmail}.</div>`;
-            }, function(error) {
-                console.error("Auto-reply failed: ", error);
-                document.getElementById('success-message').innerHTML = 
-                    `<div class="success">Message sent successfully, but auto-reply failed.</div>`;
-            });
-
+            // Optionally: clear the form
+            form.reset();
         }, function(error) {
             alert('Failed to send message. Error: ' + JSON.stringify(error));
         });
+
+    // 2️⃣ Send Auto-Reply to user
+    emailjs.sendForm("service_7s6dqpb", "template_6tcfzt4", form)
+        .then(function() {
+            console.log("Auto-reply sent successfully!");
+        }, function(error) {
+            console.warn("Auto-reply failed:", error);
+        });
 });
 </script>
+
 
 <script>
     document.addEventListener("DOMContentLoaded", function() {
