--- a/contact.html
+++ b/contact.html
@@ -381,9 +381,14 @@ textarea:hover, textarea:focus {
 border: 1.3px solid #fff;
 }
 
+.button-cover {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 button {
   height: 3em;
-  border: none;
   background: linear-gradient(90deg, #333, #222);
   color: #fff;
   font-weight: bold;
@@ -627,7 +632,7 @@ nav .socials {
 
         <div class="button-cover">
             <button type="submit">Send</button>
-            <div id="success-message"></div>
+            <div id="success-toast"></div>
         </div>
     </form>
 </div>
@@ -643,39 +648,33 @@ document.getElementById('contact-form').addEventListener('submit', function(even
     event.preventDefault(); // Prevent default form submission
 
     const form = this;
-    const successDiv = document.getElementById('success-message');
 
-    // Clear any previous messages
-    successDiv.innerHTML = '';
+    // Remove any existing toast
+    let existingToast = document.getElementById('success-toast');
+    if (existingToast) existingToast.remove();
 
     // 1️⃣ Send the main "Contact Us" email to your inbox
     emailjs.sendForm("service_7s6dqpb", "template_aseqaaw", form)
         .then(function() {
-            // Show professional success message
-            successDiv.innerHTML = `
-                <div style="
-                    background-color: #e6ffed;
-                    border: 1px solid #34c759;
-                    color: #065f46;
-                    padding: 15px 20px;
-                    border-radius: 8px;
-                    font-family: Arial, sans-serif;
-                    font-size: 16px;
-                    text-align: center;
-                    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-                    animation: fadeIn 0.5s ease-out;
-                ">
-                    ✅ Your message has been sent successfully!<br>
-                    We will get back to you within 24 hours.
-                </div>
+            // Create toast message
+            const toast = document.createElement('div');
+            toast.id = 'success-toast';
+            toast.innerHTML = `
+                ✅ Your message has been sent successfully!<br>
+                We will get back to you within 24 hours.
             `;
+            document.body.appendChild(toast);
 
-            // Fade out message after 5 seconds
+            // Fade in
+            setTimeout(() => toast.classList.add('show'), 50);
+
+            // Fade out after 5 seconds
             setTimeout(() => {
-                successDiv.innerHTML = '';
+                toast.classList.remove('show');
+                setTimeout(() => toast.remove(), 500); // Remove from DOM after fade out
             }, 5000);
 
-            // Optionally: clear the form
+            // Clear the form
             form.reset();
         }, function(error) {
             alert('Failed to send message. Error: ' + JSON.stringify(error));
@@ -692,9 +691,29 @@ document.getElementById('contact-form').addEventListener('submit', function(even
 </script>
 
 <style>
-@keyframes fadeIn {
-    0% { opacity: 0; transform: translateY(-10px); }
-    100% { opacity: 1; transform: translateY(0); }
+/* Toast message styling */
+#success-toast {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.8);
+    background-color: #111; /* Dark theme background */
+    color: #fff; /* Text color */
+    padding: 20px 30px;
+    border-radius: 10px;
+    font-family: "Archivo Black", sans-serif;
+    font-size: 18px;
+    text-align: center;
+    z-index: 9999;
+    opacity: 0;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.5);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+/* Show class triggers fade-in */
+#success-toast.show {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
 }
 </style>
 
