--- a/portfolio.html
+++ b/portfolio.html
@@ -520,6 +520,12 @@ nav .socials {
   }
 h2 {
   font-size: 2em;
+    color: white;
+    text-transform: uppercase;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    padding: 50px 16px;
 }
     </style>
     <nav>
