--- a/contact.html
+++ b/contact.html
@@ -396,9 +396,7 @@ button {
   border-radius: .4em;
   padding: 0 3em;
   margin-top: 1em;
-}
-.button:hover {
-  border: 1px solid #e5e5e5
+  border: none;
 }
 
 #referral {
