--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,28 @@ body, html {
   perspective: 1000px;
   font-family: "Archivo Black", sans-serif;
 }
+/* Throw-in animation keyframes */
+@keyframes throwIn {
+    0% {
+        transform: translateY(-100%) rotate(-10deg);
+        opacity: 0;
+    }
+    50% {
+        transform: translateY(20px) rotate(5deg);
+        opacity: 1;
+    }
+    70% {
+        transform: translateY(-10px) rotate(-2deg);
+    }
+    100% {
+        transform: translateY(0) rotate(0deg);
+    }
+}
+
+/* Apply animation to body or main wrapper */
+body {
+    animation: throwIn 1s ease-out forwards;
+}
 h2 {
     font-family: "Archivo Black", sans-serif;
     text-align: center;
