--- a/portfolio.html
+++ b/portfolio.html
@@ -99,6 +99,7 @@ body {
   align-items: flex-start;
   box-shadow: 0 4px 10px rgba(0,0,0,0.05);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  border: 1px solid black;
 }
 
 .card:hover {
