--- a/portfolio.html
+++ b/portfolio.html
@@ -48,27 +48,27 @@ body, html {
   height: 100vh;
   overflow: scroll;
 }
-/* Throw-in animation keyframes */
-@keyframes throwIn {
+/* Throw-in animation keyframes from bottom */
+@keyframes throwInFromBottom {
     0% {
-        transform: translateY(-100%) rotate(-10deg);
+        transform: translateY(100px);
         opacity: 0;
     }
-    50% {
-        transform: translateY(20px) rotate(5deg);
+    60% {
+        transform: translateY(-10px);
         opacity: 1;
     }
-    70% {
-        transform: translateY(-10px) rotate(-2deg);
+    80% {
+        transform: translateY(5px);
     }
     100% {
-        transform: translateY(0) rotate(0deg);
+        transform: translateY(0);
     }
 }
 
 /* Apply animation to body or main wrapper */
 body {
-    animation: throwIn 1s ease-out forwards;
+    animation: throwInFromBottom 1s ease-out forwards;
 }
 
 .websites h1 {
