--- a/contact.html
+++ b/contact.html
@@ -616,6 +616,7 @@ nav .socials {
             <option value="$500 - $1000">$500 - $1000</option>
             <option value="$1000 - $5000">$1000 - $5000</option>
             <option value="Over $5000">Over $5000</option>
+            <option value="Over $5000">Let's Discuss</option>
         </select>
 
             <select id="referral" name="referral">
@@ -680,7 +681,7 @@ document.getElementById('contact-form').addEventListener('submit', function(even
             const toast = document.createElement('div');
             toast.id = 'success-toast';
             toast.innerHTML = `
-                ✅ Your message has been sent successfully!<br>
+                 Your message has been sent successfully!<br>
                 We will get back to you within 24 hours.
             `;
             document.body.appendChild(toast);
