--- a/portfolio.html
+++ b/portfolio.html
@@ -129,6 +129,11 @@ body {
   font-size: 1.3em;
   color: #111;
   margin: 0.2em 0;
+    text-transform: uppercase;
+    align-items: left;
+    display: flex;
+    justify-content: left;
+    padding: none;
 }
 
 .site {
@@ -583,7 +588,7 @@ h2 {
     <div class="card" style="--card-color:#e9f8ef;">
       <img src="https://cdn.shopify.com/s/files/1/0738/3665/9009/files/heat_culture_no_bg_center.png?v=1728842338" alt="heatculture Logo" loading="lazy">
     
-      <span class="tag" style="background: #ffffff; border: none;"> Clothing brand</span>
+      <span class="tag" style="background: rgb(228 228 231); border: none; color: black"> Clothing brand</span>
       <h2>HEAT CULTURE</h2>   <div class="meta">
         <i class="fa-solid fa-calendar"></i>
         <span class="year">2024</span>
@@ -608,7 +613,7 @@ h2 {
     <div class="card" style="--card-color:#fcf4fb;">
       <img src="https://cdn.shopify.com/s/files/1/0665/5849/2822/files/IMG_9171.png?v=1757995982" alt="Saharan rockin" loading="lazy">
    
-      <span class="tag"  style="background: #ffffff; border: none;">Comic series</span>
+      <span class="tag"  style="background: rgb(228 228 231); border: none; color: black">Comic series</span>
       <h2>SAHARAN ROCKIN</h2>    <div class="meta">
         <i class="fa-solid fa-calendar"></i>
         <span class="year">2025</span>
@@ -633,8 +638,8 @@ h2 {
     <div class="card" style="--card-color:#ffffff;">
       <img src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990" alt="anotherstate" loading="lazy">
       
-      <span class="tag"  style="background: #ffffff; border: none;">Fashion & Lifestyle</span>
-      <h2>Main Character India</h2>  <div class="meta">
+      <span class="tag"  style="background: rgb(228 228 231); border: none; color: black">Fashion & Lifestyle</span>
+      <h2>ANOTHER STATE</h2>  <div class="meta">
         <i class="fa-solid fa-calendar"></i>
         <span class="year">2024</span>
       </div>
