--- a/portfolio.html
+++ b/portfolio.html
@@ -130,10 +130,10 @@ body {
   color: #111;
   margin: 0.2em 0;
     text-transform: uppercase;
-    align-items: left;
+    align-items: flex-start;
     display: flex;
     justify-content: left;
-    padding: none;
+    padding: 0;
 }
 
 .site {
