--- a/about.html
+++ b/about.html
@@ -47,7 +47,20 @@ body, html {
     background-color: #000000 !important;
   font-family: 'Roboto', sans-serif;
 }
+/* Fade-in keyframes */
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
 
+/* Apply to body or main wrapper */
+body {
+    animation: fadeIn 1s ease-in forwards;
+}
 
   nav {
             display: flex;
