--- a/faqs.html
+++ b/faqs.html
@@ -48,6 +48,22 @@ body, html {
     font-family: 'Roboto', sans-serif;
 }
 
+/* Fade-in keyframes */
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+/* Apply to body or main wrapper */
+body {
+    animation: fadeIn 1s ease-in forwards;
+}
+
+
 /* Navigation Styles */
   nav {
             display: flex;
