--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@ body, html {
   overflow: hidden;
   height: 100vh;
 }
+/* Fade-in keyframes */
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+/* Apply to body or main wrapper */
+body {
+    animation: fadeIn 1s ease-in forwards;
+}
 
 
   nav {
