--- a/about.html
+++ b/about.html
@@ -327,6 +327,9 @@ nav .active:hover {
 
 .icon-box:hover {
     transform: translateY(-10px);
+      box-shadow: 0 0 15px 5px rgba(200, 200, 200, 0.4), 
+              0 0 30px 10px rgba(200, 200, 200, 0.2);
+    border: 1px solid #ffffff;
 }
 
 @media (max-width: 767px) {
