--- a/about.html
+++ b/about.html
@@ -329,7 +329,6 @@ nav .active:hover {
     transform: translateY(-10px);
       box-shadow: 0 0 15px 5px rgba(200, 200, 200, 0.4), 
               0 0 30px 10px rgba(200, 200, 200, 0.2);
-    border: 1px solid #ffffff;
 }
 
 @media (max-width: 767px) {
@@ -453,7 +452,7 @@ nav .socials {
         <div class="location-details">
             <h1>Find us <i class="bi bi-geo"></i></h1>
             <p><b>Location:</b> Lagos, Nigeria</p>
-            <p><b>Email:</b> <a href="mailto:dannyagency98@gmail.com">contact@danny-agency.com</a></p>
+            <p><b>Email:</b> <a href="mailto:dannyagency98@gmail.com">dannyagency98@gmail.com</a></p>
             <p><b>Phone:</b> <a href="tel:+2348165241774">+234 816 5241 774</a></p>
             <div class="about-socials">
               <p>Socials:</p>
