--- a/about.html
+++ b/about.html
@@ -326,11 +326,10 @@ nav .active:hover {
 }
 
 .icon-box:hover {
-    transform: translateY(-10px);
-      box-shadow: 0 0 15px 5px rgba(200, 200, 200, 0.4), 
-              0 0 30px 10px rgba(200, 200, 200, 0.2);
+    transform: translateY(-5px);
+    box-shadow: 0 0 8px 2px rgba(200, 200, 200, 0.4), 
+                0 0 15px 8px rgba(200, 200, 200, 0.2);
 }
-
 @media (max-width: 767px) {
     .icon-box {
         margin-bottom: 20px;
@@ -587,9 +586,26 @@ window.addEventListener('load', () => {
     }, 2000);
   });
     </script>
+    <!-- Optimize Page Load Speed -->
+<script>
+  // Defer loading of images for better performance
+  document.addEventListener("DOMContentLoaded", function() {
+    const imgs = document.querySelectorAll("img[data-src]");
+    imgs.forEach(img => {
+      img.setAttribute("src", img.getAttribute("data-src"));
+      img.onload = () => img.removeAttribute("data-src");
+    });
+  });
+
+  // Minimize reflows & repaints
+  window.addEventListener("load", () => {
+    document.body.style.visibility = "visible";
+  });
+</script>
+
 <footer>
 <div class="socials">
-             <a href="https://instagram.com/dannyagency" target="_blank"><i class="bi bi-instagram"></i></a>
+             <a href="https://instagram.com/dannyagency_" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
          <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
         </div>
