--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@ nav .socials {
     </header>
 <footer>
   <div class="socials">
-            <a href="https://instagram.com/dannyagency" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="https://instagram.com/dannyagency_" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
             <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
         </div>
@@ -784,4 +784,21 @@ document.getElementById('model-viewer').addEventListener('contextmenu', function
     }, 20); // 0→100 in about 2 seconds
   });
 </script>
+<!-- Optimize Page Load Speed -->
+<script>
+  // Defer loading of images for better performance
+  document.addEventListener("DOMContentLoaded", function() {
+    const imgs = document.querySelectorAll("img[data-src]");
+    imgs.forEach(img => {
+      img.setAttribute("src", img.getAttribute("data-src"));
+      img.onload = () => img.removeAttribute("data-src");
+    });
+  });
+
+  // Minimize reflows & repaints
+  window.addEventListener("load", () => {
+    document.body.style.visibility = "visible";
+  });
+</script>
+
     </body></html>
