--- a/about.html
+++ b/about.html
@@ -304,6 +304,7 @@ nav .active:hover {
     border-radius: 10px;
     transition: transform 0.3s;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    border: 1px solid #ccc;
 }
 
 .icon-box i {
