--- a/portfolio.html
+++ b/portfolio.html
@@ -156,6 +156,11 @@ body {
   gap: 4px;
 }
 
+.fa-solid, .fas {
+    font-weight: 900;
+    color: #ccc;
+}
+
 .year {
   color: #ccc;
   font-size: 0.9em;
@@ -586,7 +591,7 @@ h2 {
     <div class="card" style="--card-color:#1a1a1a;">
       <img src="https://cdn.shopify.com/s/files/1/0738/3665/9009/files/heat_culture_no_bg_center.png?v=1728842338" alt="heatculture Logo" loading="lazy">
     
-      <span class="tag" style="background: rgb(228 228 231); border: none; color: black"> Clothing brand</span>
+      <span class="tag" style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black"> Clothing brand</span>
       <h2>HEAT CULTURE</h2>   <div class="meta">
         <i class="fa-solid fa-calendar"></i>
         <span class="year">2024</span>
@@ -611,7 +616,7 @@ h2 {
     <div class="card" style="--card-color:#1a1a1a;">
       <img src="https://cdn.shopify.com/s/files/1/0665/5849/2822/files/IMG_9171.png?v=1757995982" alt="Saharan rockin" loading="lazy">
    
-      <span class="tag"  style="background: rgb(228 228 231); border: none; color: black">Comic series</span>
+      <span class="tag"  style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Comic series</span>
       <h2>SAHARAN ROCKIN</h2>    <div class="meta">
         <i class="fa-solid fa-calendar"></i>
         <span class="year">2025</span>
@@ -636,7 +641,7 @@ h2 {
     <div class="card" style="--card-color: #1a1a1a;">
       <img src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990" alt="anotherstate" loading="lazy">
       
-      <span class="tag"  style="background: rgb(228 228 231); border: none; color: black">Fashion & Lifestyle</span>
+      <span class="tag"  style=" background: linear-gradient(46deg, #cccccc, transparent); border: none; color: black">Fashion & Lifestyle</span>
       <h2>ANOTHER STATE</h2>  <div class="meta">
         <i class="fa-solid fa-calendar"></i>
         <span class="year">2024</span>
