--- a/about.html
+++ b/about.html
@@ -279,6 +279,7 @@ nav ul li a {
 nav .active:hover {
   transform: scale(0.9) !important;
   color: #000 !important;
+  transition: .3s ease-in-out !important
 }
 .socials a:hover {
     transform: scale(1.1);
@@ -357,6 +358,10 @@ nav .socials {
     align-items: center;
     justify-content: center;
     gap: 1em;
+}
+.copyright {
+    font-size: 12px;
+
 }
 }
 .about-socials {
