--- a/contact.html
+++ b/contact.html
@@ -241,6 +241,7 @@ nav ul li a {
 nav .active:hover {
   transform: scale(0.9) !important;
   color: #000 !important;
+  transition: .2s ease-in-out;
 }
 footer {
   display: flex;
@@ -503,6 +504,9 @@ nav .socials {
     align-items: center;
     justify-content: center;
     gap: 1em;
+}
+.copyright {
+    font-size: 12px;
 }
 }
 #success-message {
