--- a/login.html
+++ b/login.html
@@ -263,6 +263,7 @@ nav ul li a {
 nav .active:hover {
   transform: scale(0.9) !important;
   color: #000 !important;
+  transition: .3s ease-in-out !important
 }
 .current {
             color: #8d8d8d;
@@ -373,6 +374,9 @@ nav .socials {
     align-items: center;
     justify-content: center;
     gap: 1em;
+}
+.copyright {
+    font-size: 12px;
 }
 }
 .preloader {
