--- a/index.html
+++ b/index.html
@@ -349,6 +349,7 @@ nav ul li a {
 nav .active:hover {
   transform: scale(0.9) !important;
   color: #000 !important;
+  transition: .3s ease-in-out !important
 }
 .logo {
   width: 2em;
@@ -466,6 +467,9 @@ nav .socials {
     align-items: center;
     justify-content: center;
     gap: 1em;
+}
+.copyright {
+    font-size: 12px;
 }
 }
 .current {
