--- a/portfolio.html
+++ b/portfolio.html
@@ -191,8 +191,7 @@ body {
 /* Responsive */
 @media (max-width: 768px) {
   .card {
-    width: 300px;
-    flex: 1 1 calc(50% - 2em);
+    flex: 1 1 calc(100% - 2em);
   }
 }
 
@@ -551,15 +550,17 @@ nav .socials {
     }
   }
 h2 {
-  font-size: 2em;
+    font-size: 2em;
     color: white;
     text-transform: uppercase;
     align-items: center;
     display: flex;
     justify-content: center;
-    padding: 50px 16px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
-        /* ===== IMPACT SECTION ===== */
+
+/* ===== IMPACT SECTION ===== */
 .impact-section {
   background-color: #1a1a1a;
   color: #ccc;
@@ -567,23 +568,23 @@ h2 {
   padding: 80px 20px;
 }
 
-/* Headings */
-.impact-section h1,
-.impact-section h2,
-.impact-section h3 {
+.impact-section h2 {
   color: #fff;
+  font-size: clamp(1.8rem, 4vw, 2.8rem);
+  font-weight: 700;
+  line-height: 1.3;
+  margin-bottom: 0.6em;
 }
 
-/* Subheading / paragraph */
 .impact-section p {
   color: #ccc;
-  font-size: 1rem;
+  font-size: clamp(0.9rem, 2.5vw, 1.1rem);
   line-height: 1.6;
-  margin-top: 10px;
-  margin-bottom: 30px;
+  max-width: 800px;
+  margin: 0 auto 60px;
 }
 
-/* Feature boxes */
+/* Layout for feature boxes */
 .impact-features {
   display: flex;
   flex-wrap: wrap;
@@ -593,30 +594,133 @@ h2 {
 }
 
 .feature {
-  max-width: 300px;
+  max-width: 280px;
   text-align: center;
-}
-
-.feature i {
-  font-size: 2rem;
-  display: block;
-  margin-bottom: 15px;
+  flex: 1 1 260px;
+  padding: 10px;
 }
 
 .feature h3 {
-  font-size: 1.1rem;
-  margin-bottom: 10px;
   color: #fff;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  font-size: clamp(1rem, 2.5vw, 1.2rem);
+  font-weight: 600;
 }
 
-/* Responsive */
-@media (max-width: 768px) {
+.feature p {
+  color: #ccc;
+  font-size: clamp(0.85rem, 2vw, 1rem);
+  line-height: 1.5;
+}
+
+/* Icon box styling */
+.icon-box {
+  width: 70px;
+  height: 70px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto 15px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.icon-box i {
+  font-size: 2rem;
+}
+
+/* Colors */
+.icon-box.cyan {
+  background-color: rgba(0, 255, 255, 0.08);
+  color: #00ffff;
+}
+
+.icon-box.purple {
+  background-color: rgba(180, 0, 255, 0.08);
+  color: #b400ff;
+}
+
+.icon-box.green {
+  background-color: rgba(0, 255, 100, 0.08);
+  color: #00ff64;
+}
+
+/* Hover animation */
+.icon-box:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.08);
+}
+
+/* ===== RESPONSIVE ADJUSTMENTS ===== */
+
+/* Tablets */
+@media (max-width: 992px) {
+  .impact-section {
+    padding: 60px 15px;
+  }
+
+  .impact-features {
+    gap: 30px;
+  }
+
+  .icon-box {
+    width: 60px;
+    height: 60px;
+  }
+
+  .icon-box i {
+    font-size: 1.7rem;
+  }
+}
+
+/* Mobile */
+@media (max-width: 600px) {
+  .impact-section {
+    padding: 50px 10px;
+  }
+
   .impact-features {
     flex-direction: column;
     align-items: center;
+    gap: 25px;
   }
-    .copyright {
+
+  .feature {
+    max-width: 100%;
+  }
+
+  .icon-box {
+    width: 55px;
+    height: 55px;
+  }
+
+  .icon-box i {
+    font-size: 1.5rem;
+  }
+
+  .impact-section h2 {
+    font-size: 1.7rem;
+  }
+
+  .impact-section p {
+    font-size: 0.9rem;
+  }
+
+  .feature h3 {
+    font-size: 1rem;
+  }
+
+  .feature p {
+    font-size: 0.85rem;
+  }
+   .copyright {
     font-size: 12px;
+}
+h2 {
+    font-size: 1.5em;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 }
     </style>
@@ -722,26 +826,32 @@ h2 {
     </div>
   </a>
 </section>
-      <section class="impact-section">
+<section class="impact-section">
   <div class="container">
     <h2>From Idea to Impact</h2>
-    <p>Every project follows our proven methodology to ensure exceptional results...</p>
+    <p>Every project follows our proven methodology to ensure exceptional results that exceed expectations and drive real business growth.</p>
 
     <div class="impact-features">
       <div class="feature">
-        <i class="icon-calendar"></i>
+        <div class="icon-box cyan">
+          <i class="bi bi-calendar3"></i>
+        </div>
         <h3>2–4 Week Delivery</h3>
         <p>Rapid development cycles that get you to market 3x faster than traditional firms.</p>
       </div>
 
       <div class="feature">
-        <i class="icon-users"></i>
+        <div class="icon-box purple">
+          <i class="bi bi-people"></i>
+        </div>
         <h3>Collaborative Process</h3>
         <p>Weekly check-ins and continuous feedback loops ensure your vision comes to life.</p>
       </div>
 
       <div class="feature">
-        <i class="icon-graph"></i>
+        <div class="icon-box green">
+          <i class="bi bi-graph-up-arrow"></i>
+        </div>
         <h3>Measurable Results</h3>
         <p>Every project includes performance metrics and ongoing optimization recommendations.</p>
       </div>
