--- a/portfolio.html
+++ b/portfolio.html
@@ -565,7 +565,7 @@ h2 {
   background-color: #1a1a1a;
   color: #ccc;
   text-align: center;
-  padding: 80px 20px;
+  padding: 20px 20px !important;
 }
 
 .impact-section h2 {
@@ -573,12 +573,11 @@ h2 {
   font-size: clamp(1.8rem, 4vw, 2.8rem);
   font-weight: 700;
   line-height: 1.3;
-  margin-bottom: 0.6em;
+  padding-bottom: 10px;
 }
 
 .impact-section p {
   color: #ccc;
-  font-size: clamp(0.9rem, 2.5vw, 1.1rem);
   line-height: 1.6;
   max-width: 800px;
   margin: 0 auto 60px;
@@ -683,11 +682,13 @@ h2 {
   .impact-features {
     flex-direction: column;
     align-items: center;
-    gap: 25px;
+    gap: 0;
   }
 
   .feature {
     max-width: 100%;
+    padding: 5px;
+    flex: 1 1 200px;
   }
 
   .icon-box {
@@ -712,7 +713,7 @@ h2 {
   }
 
   .feature p {
-    font-size: 0.85rem;
+    font-size: 0.78rem;
   }
    .copyright {
     font-size: 12px;
@@ -828,32 +829,32 @@ h2 {
 </section>
 <section class="impact-section">
   <div class="container">
-    <h2>From Idea to Impact</h2>
-    <p>Every project follows our proven methodology to ensure exceptional results that exceed expectations and drive real business growth.</p>
+    <h2>VISIONS INTO REALITY</h2>
+    <p>From startup concepts to enterprise-grade solutions, we turn innovative ideas into digital experiences that grow with your business.</p>
 
     <div class="impact-features">
       <div class="feature">
         <div class="icon-box cyan">
           <i class="bi bi-calendar3"></i>
         </div>
-        <h3>2–4 Week Delivery</h3>
-        <p>Rapid development cycles that get you to market 3x faster than traditional firms.</p>
+        <h3>Fast Execution</h3>
+        <p>From concept to launch in weeks, not months.</p>
       </div>
 
       <div class="feature">
         <div class="icon-box purple">
           <i class="bi bi-people"></i>
         </div>
-        <h3>Collaborative Process</h3>
-        <p>Weekly check-ins and continuous feedback loops ensure your vision comes to life.</p>
+        <h3>Collaborative Strategy</h3>
+        <p>Open communication and real-time updates throughout development.</p>
       </div>
 
       <div class="feature">
         <div class="icon-box green">
           <i class="bi bi-graph-up-arrow"></i>
         </div>
-        <h3>Measurable Results</h3>
-        <p>Every project includes performance metrics and ongoing optimization recommendations.</p>
+        <h3>Optimized Results</h3>
+        <p>Every build is optimized for measurable success.</p>
       </div>
     </div>
   </div>
