--- a/portfolio.html
+++ b/portfolio.html
@@ -835,7 +835,7 @@ h2 {
     <div class="impact-features">
       <div class="feature">
         <div class="icon-box cyan">
-          <i class="bi bi-calendar3"></i>
+          <i class="bi bi-lightning-charge-fill"></i>
         </div>
         <h3>Fast Execution</h3>
         <p>From concept to launch in weeks, not months.</p>
@@ -846,7 +846,7 @@ h2 {
           <i class="bi bi-people"></i>
         </div>
         <h3>Collaborative Strategy</h3>
-        <p>Open communication and real-time updates throughout development.</p>
+        <p>Real-time updates throughout development.</p>
       </div>
 
       <div class="feature">
