--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ header a {
     align-items: center;
     gap: .6em;
     color: #fff;
-    border: 1px solid #fff;
+    border: 1px solid #ccc;
     text-decoration: none;
     border-radius: 9999px;
 }
