--- a/about.html
+++ b/about.html
@@ -564,16 +564,14 @@ nav .socials {
     <div class="container">
       <!-- Left Content -->
       <div class="hero-text">
-        <h1>Build to Ship,<br>Scaled to Win</h1>
+        <h1>Built for Momentum,<br>Designed for Growth</h1>
         <p>
-          We're a product and growth firm built by founders, for founders. Every strategy session,
-          every line of code, every design decision is crafted with the same entrepreneurial mindset
-          you bring to your business—because we've been in your shoes.
-        </p>
+          We’re a team of builders and strategists who turn big ideas into scalable products.
+     Every concept, every design choice, every line of code is crafted with intent to help your business move faster, smarter, and further.
+    </p>
         <p>
-          Our team combines startup agility with enterprise expertise, ensuring your project benefits
-          from both speed and sophistication. We believe great partnerships create great outcomes,
-          and our 45+ successful launches speak to that philosophy.
+          We know what it takes to launch and scale because we’ve done it ourselves.
+     Our process blends startup speed with enterprise-level precision, ensuring every project we ship delivers measurable impact and long-term success.
         </p>
       </div>
 
@@ -581,19 +579,19 @@ nav .socials {
       <div class="hero-cards">
         <div class="card">
           <h3>Growth-Driven</h3>
-          <p>Every decision we make is optimized for your long-term success and scalable growth.</p>
+          <p>We focus on meaningful results, not just deliverables but driving measurable growth for your business.</p>
         </div>
         <div class="card">
           <h3>True Partnership</h3>
-          <p>We don't disappear after launch. We're invested in your success for the long haul.</p>
+          <p>We don't disappear after launch. We're committed to your vision long after launch day.</p>
         </div>
         <div class="card">
-          <h3>Founder-First</h3>
-          <p>We think like founders, not vendors. Your vision becomes our mission.</p>
+          <h3>Founder-Minded</h3>
+          <p>We think like entrepreneurs, not agencies. Your mission becomes our mission.</p>
         </div>
         <div class="card">
           <h3>Stage-Smart</h3>
-          <p>From MVP to enterprise scale, we adapt our approach to your business stage.</p>
+          <p>FFrom early validation to full-scale growth, we tailor our approach to your business stage.</p>
         </div>
       </div>
     </div>
