--- a/portfolio.html
+++ b/portfolio.html
@@ -942,13 +942,13 @@ h2 {
 
 <section class="cta-section">
   <div class="cta-container">
-    <h2>Ready to Join Our<br>Success Stories?</h2>
+    <h2>Ready to Build What’s Next?</h2>
     <p>
-      Let's create something extraordinary together. Your success story starts with a conversation.
+      Let’s create something that sets a new standard.
     </p>
     <div class="cta-buttons">
-      <a href="contact.html" class="btn btn-primary">Start Your Project →</a>
-      <a href="login.html" class="btn btn-outline">View Our Services</a>
+      <a href="contact.html" class="btn btn-primary">Start Your Journey →</a>
+      <a href="login.html" class="btn btn-outline">Explore our work</a>
     </div>
   </div>
 </section>
